[package]
name = "hefti"
version = "0.1.0"
authors = ["Alexander Sieg <alex@xanderio.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6"
dotenv = "0.14"
diesel = { version = "1.4", features = ["extras", "postgres"] }
router = "0.6"
persistent = "0.4"
staticfile = "0.5"
mount = "0.4"
env_logger = "0.6.2"
logger = "0.4"
handlebars-iron = "0.28"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
