[package]
name = "hefti"
version = "0.1.0"
authors = ["Alexander Sieg <alex@xanderio.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6.2"

iron = "0.6"
router = "0.6"
persistent = "0.4"
staticfile = "0.5"
mount = "0.4"
handlebars = "^2.0"
handlebars-iron = "0.28"
logger = "0.4"
bodyparser = "0.8"

dotenv = "0.14"
diesel = { version = "1.4", features = ["extras", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
